testdata/zkc/invalid/debug_01.zkc
//error:2:3-8:not permitted on memory declaration
#[debug]
pub input data(address:u16) -> (byte:u8)

fn main() {
    var x:u8 = data[0]
}
